--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
               <% locals.posts.forEach((post,index) => { %>
                 <div class="col post-card">
                   <div class="card shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"><%= post.title %></text></svg>
+                    <svg class="bd-placeholder-img card-img-top card-title" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"><%= post.title %></text></svg>
                     <div class="card-body">
                       <textarea name="editor" class="text-edit"></textarea>
                       <p class="card-text"><%= post.content %></p>
@@ -77,11 +77,13 @@
           let currentTextArea = textEditArea.eq(id);
           let postText = $('.card-text').eq(id);
           let currentBTN = $('.edit-btn').eq(id);
+          let title = $('.card-title').eq(id);
 
           if(postText.text() != ""){
             currentTextArea.css({
                 width: postText.outerWidth(),
-                height: postText.outerHeight() + 10,
+                height: 'auto',
+                height: currentTextArea.scrollHeight + 'px'
               });
           }
 
@@ -99,9 +101,24 @@
               console.log(currentTextArea.val());
               postText.text(currentTextArea.val());
               currentBTN.removeClass("func2").addClass("func1");
-          }
-          console.log(currentTextArea.val());
 
+              $.ajax({
+                url: '/update',
+                type: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify({
+                  id: id , title: title, content: postText.text()
+                }),
+                success: function(response) {
+                    console.log('Array updated:', response);
+                    alert('Array updated!');
+                },
+                error: function(error) {
+                    console.error('Error updating array:', error);
+                }
+            });
+
+          }
         }
 
       </script>
