--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
             <p class="lead text-body-secondary">Test of node, express, ejs, jquery, and using public apis. <br> Create, edit and delete posts. All posts will be saved in the current session only as I don't use a saving system yet :D</p>
             <p>
                 <form action="/submit" method="POST" id="text-form">
-                    <textarea id="post-creation" name="content" placeholder="Type your post" rows="4" cols="50"></textarea>
+                    <textarea id="post-creation" name="content" placeholder="Type your post" rows="4" cols="50" maxlength="280"></textarea>
                     <div class="container">
                       <input type="submit" class="btn btn-primary my-2" value="Create">
                       <input type="button" class="btn btn-secondary my-2" value="Clear" id="clear">
@@ -38,7 +38,7 @@
                   <div class="card shadow-sm">
                     <svg class="bd-placeholder-img card-img-top card-title" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"><%= post.title %></text></svg>
                     <div class="card-body">
-                      <textarea name="editor" class="text-edit"></textarea>
+                      <textarea name="editor" class="text-edit" maxlength="280"></textarea>
                       <p class="card-text"><%= post.content %></p>
                       <p class="analysis"><%= locals.analysis %></p>
                       <div class="d-flex justify-content-between align-items-center">
