--- a/public/style.css
+++ b/public/style.css
@@ -3,3 +3,14 @@ textarea{
     min-height: 2lh;
     max-height: 5lh;
 }
+
+
+.horizontal {
+    height: 30vh;
+    object-fit: cover;
+}
+
+.vertical{
+    height: 30vh;
+    object-fit: contain;
+}
