--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,15 @@
 </head>
 <body>
 
-  
+  <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+    <symbol id="check-circle-fill" viewBox="0 0 16 16">
+      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+    </symbol>
+    <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
+      <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+    </symbol>
+  </svg>
+
     <section class="py-5 text-center container">
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
@@ -18,17 +26,24 @@
             <p>
                 <form action="/submit" method="POST" id="text-form" enctype="multipart/form-data">
                     <textarea id="post-creation" name="content" placeholder="Type your post" rows="4" cols="50" maxlength="280"></textarea>
+                    <div id="warning-file"><svg class="bi small-icon" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill" /><p class="d-inline fst-italic text-danger">Upload a file pls</p></svg></div>
                     <div class="container">
-                      <input type="submit" class="btn btn-primary my-2" value="Create">
+                      <input type="submit" class="btn btn-primary my-2" value="Create" id="submit-btn">
                       <input type="button" class="btn btn-secondary my-2" value="Clear" id="clear">
 
                       <label for="input-file" class="btn btn-danger my-2" >Upload an Image</label>
                       <input style="display: none;" type="file" accept="image/jpeg, image/png, image/jpg" id="input-file" name="coverimg">
+
+                    
                     </div>
+                      
                 </form>
+                
             </p>
+            
           </div>
         </div>
+        
       </section>
 
 
